# rust-console

./: Cargo.toml
src/: console.rs  error_handling.rs  main.rs
