[package]
name = "console-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
indicatif = { version =  "0.17.3" }
dialoguer = { version = "0.10.3", default-features = true, features = ["completion", "history", "password", "fuzzy-select"] }
